--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
-  "name": "actorm",
-  "version": "1.0.0",
+  "name": "cokeorm",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "license": "BSD-3-Clause",
+  "author": {
+    "name": "Ricardo Crescenti",
+    "email": "ricardo.crescenti@gmail.com"
+  },
+  "main": "./index.js",
   "types": "lib/index.d.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "cokeorm": "./cli.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ricardocrescenti/ActORM.git"
   },
   "keywords": [
-    "ORM",
-    "Postgres"
+    "orm",
+    "typescript",
+    "typescript-orm",
+    "pg",
+    "postgres",
+    "postgres-orm"
   ],
-  "author": "Ricardo Crescenti",
-  "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/ricardocrescenti/ActORM/issues"
+    "url": "https://github.com/ricardocrescenti/coke-orm/issues"
   },
-  "homepage": "https://github.com/ricardocrescenti/ActORM#readme",
+  "homepage": "https://github.com/ricardocrescenti/coke-orm#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/pg": "^7.14.9",
+    "@types/sha.js": "^2.4.0",
     "pg": "^8.5.1"
   },
   "dependencies": {
-    "@types/sha.js": "^2.4.0",
+    "glob": "^7.1.7",
     "install": "^0.13.0",
     "npm": "^6.14.11",
     "reflect-metadata": "^0.1.13",
