Implementado a criação, geração e execução das migrações

--- a/coke-orm.config.json
+++ b/coke-orm.config.json
@@ -6,9 +6,10 @@
    "password": "supadm",
    "database": "devmaster",
    "entities": [
-      "/samples/models/**.*"
+      "samples/models/**/*.model.js"
    ],
    "migrations": {
-      "synchronize": true
+      "synchronize": false,
+      "directory": "samples/migrations"
    }
 }
