--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/glob": "^7.1.3",
     "@types/pg": "^7.14.9",
     "@types/sha.js": "^2.4.0",
+    "@types/yargs": "^16.0.1",
     "pg": "^8.5.1"
   },
   "dependencies": {
@@ -43,6 +44,8 @@
     "npm": "^6.14.11",
     "reflect-metadata": "^0.1.13",
     "sha.js": "^2.4.11",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yargonaut": "^1.1.4",
+    "yargs": "^17.0.1"
   }
 }
