--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@types/pg": "^7.14.9",
     "@types/sha.js": "^2.4.0",
     "@types/yargs": "^16.0.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
     "glob": "^7.1.7",
