Ajustado o nome do pacote

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cokeorm",
+  "name": "@ricardocrescenti/cokeorm",
   "version": "0.1.0",
   "description": "",
   "license": "BSD-3-Clause",
