--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coke-orm",
+  "name": "@ricardocrescenti/coke-orm",
   "version": "0.1.0",
   "description": "",
   "license": "BSD-3-Clause",
@@ -8,7 +8,7 @@
     "email": "ricardo.crescenti@gmail.com"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@ricardocrescenti"
+    "registry": "https://npm.pkg.github.com"
   },
   "main": "./index.js",
   "types": "lib/index.d.js",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ricardocrescenti/ActORM.git"
+    "url": "git+https://github.com/ricardocrescenti/coke-orm.git"
   },
   "keywords": [
     "orm",
