--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/sha.js": "^2.4.0",
     "@types/yargs": "^16.0.1",
     "pg": "^8.5.1",
+    "rimraf": "^3.0.2",
     "typescript": "^4.3.2"
   },
   "dependencies": {
