--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ricardocrescenti/coke-orm",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "license": "BSD-3-Clause",
   "author": {
@@ -8,7 +8,8 @@
     "email": "ricardo.crescenti@gmail.com"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
   },
   "main": "./index.js",
   "types": "lib/index.d.js",
