--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,6 +65,19 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
+
+    
+    // "allowSyntheticDefaultImports": true,
+    // "moduleResolution": "node",
+    // // "importHelpers": true,
+    // "noImplicitAny": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "noImplicitReturns": true,
+    // "stripInternal": true,
+    // "pretty": true,
+    // "strictNullChecks": true,
+    // // "noUnusedLocals": true,
+    // "downlevelIteration": true
   },
   "include": [
     "src"
