--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ricardocrescenti/coke-orm",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "",
   "license": "BSD-3-Clause",
   "author": {
@@ -46,9 +46,11 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "chalk": "^4.1.1",
     "glob": "^7.1.7",
     "install": "^0.13.0",
-    "npm": "^6.14.11",
+    "log-update": "^4.0.0",
+    "npm": "^7.17.0",
     "reflect-metadata": "^0.1.13",
     "sha.js": "^2.4.11",
     "uuid": "^8.3.2",
