--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "@types/pg": "^7.14.9",
     "@types/sha.js": "^2.4.0",
     "@types/yargs": "^16.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.28.0",
+    "eslint-config-google": "^0.14.0",
     "pg": "^8.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.2"
