Implementado busca pelo campo de relation direto, sem ter que usar os campos da tabela relacionada

--- a/coke-orm.config.json
+++ b/coke-orm.config.json
@@ -11,5 +11,8 @@
    "migrations": {
       "synchronize": true,
       "directory": "./samples/migrations/*.js"
+   },
+   "cli": {
+      "migrations": "./samples/migrations"
    }
 }
