Adicionado opção para deletar as tabelas adicionais do banco de dados

--- a/coke-orm.config.json
+++ b/coke-orm.config.json
@@ -10,6 +10,8 @@
    "triggers": ["lib/samples/triggers/**/*.trigger.js"],
    "migrations": {
       "synchronize": true,
+      "deleteColumns": true,
+      "deleteTables": true,
       "directory": "lib/samples/migrations/*.js"
    },
    "cli": {
