Correção nos campos virtuais que não populavam ao serem criados, para não perder o valor quando eram utilizados nos Subscribers

--- a/coke-orm.config.json
+++ b/coke-orm.config.json
@@ -5,9 +5,18 @@
    "user": "devmaster",
    "password": "supadm",
    "database": "devmaster",
-   "entities": ["lib/samples/models/**/*.model.js"],
-   "subscribers": ["lib/samples/models/**/*.subscriber.js"],
-   "triggers": ["lib/samples/triggers/**/*.trigger.js"],
+   "entities": [
+      "lib/samples/models/**/*.model.js",
+      "lib/__tests__/models/*.model.js"
+   ],
+   "subscribers": [
+      "lib/samples/models/**/*.subscriber.js",
+      "lib/__tests__/models/*.subscriber.js"
+   ],
+   "triggers": [
+      "lib/samples/triggers/**/*.trigger.js",
+      "lib/__tests__/triggers/*.trigger.js"
+   ],
    "migrations": {
       "synchronize": true,
       "deleteColumns": true,
