--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ricardocrescenti/coke-orm",
-  "version": "0.11.2",
+  "version": "0.12.0",
   "description": "",
   "license": "BSD-3-Clause",
   "author": {
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/jest": "^26.0.23",
     "@types/pg": "^7.14.9",
     "@types/sha.js": "^2.4.0",
     "@types/yargs": "^16.0.1",
@@ -49,21 +50,20 @@
     "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.28.0",
     "eslint-config-google": "^0.14.0",
+    "jest": "^27.0.5",
     "pg": "^8.5.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "ts-jest": "^27.0.3"
   },
   "dependencies": {
-    "@types/jest": "^26.0.23",
     "chalk": "^4.1.1",
     "glob": "^7.1.7",
     "install": "^0.13.0",
-    "jest": "^27.0.5",
     "log-update": "^4.0.0",
-    "npm": "^7.17.0",
+    "npm": "^7.24.1",
     "reflect-metadata": "^0.1.13",
     "sha.js": "^2.4.11",
-    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "uuid": "^8.3.2",
     "yargonaut": "^1.1.4",
