--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ricardocrescenti/coke-orm",
-  "version": "0.14.4",
+  "version": "0.15.0",
   "description": "",
   "license": "BSD-3-Clause",
   "author": {
@@ -53,8 +53,9 @@
     "jest": "^27.0.5",
     "pg": "^8.5.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.3.2",
-    "ts-jest": "^27.0.3"
+    "sqlite3": "^5.0.2",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
     "chalk": "^4.1.1",
