--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ricardocrescenti/coke-orm",
-  "version": "0.16.1",
+  "version": "0.17.0",
   "description": "",
   "license": "BSD-3-Clause",
   "author": {
@@ -41,33 +41,31 @@
     "url": "git+https://github.com/ricardocrescenti/coke-orm.git"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/jest": "^26.0.23",
-    "@types/pg": "^7.14.9",
-    "@types/sha.js": "^2.4.0",
-    "@types/yargs": "^16.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "eslint": "^7.28.0",
-    "eslint-config-google": "^0.14.0",
-    "jest": "^27.0.5",
-    "pg": "^8.5.1",
-    "rimraf": "^3.0.2",
-    "sqlite3": "^5.0.2",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.2"
+    "@types/glob": "7.1.3",
+    "@types/jest": "26.0.23",
+    "@types/pg": "7.14.9",
+    "@types/sha.js": "2.4.0",
+    "@types/yargs": "16.0.1",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "eslint": "7.32.0",
+    "eslint-config-google": "0.14.0",
+    "jest": "27.0.5",
+    "pg": "8.5.1",
+    "rimraf": "3.0.2",
+    "ts-jest": "27.0.3",
+    "typescript": "4.7.4"
   },
   "dependencies": {
-    "chalk": "^4.1.1",
-    "glob": "^7.1.7",
-    "install": "^0.13.0",
-    "log-update": "^4.0.0",
-    "npm": "^7.24.1",
-    "reflect-metadata": "^0.1.13",
-    "sha.js": "^2.4.11",
-    "ts-node": "^10.0.0",
-    "uuid": "^8.3.2",
-    "yargonaut": "^1.1.4",
-    "yargs": "^17.0.1"
+    "chalk": "4.1.1",
+    "glob": "7.1.7",
+    "install": "0.13.0",
+    "log-update": "4.0.0",
+    "reflect-metadata": "0.1.13",
+    "sha.js": "2.4.11",
+    "ts-node": "10.9.1",
+    "uuid": "8.3.2",
+    "yargonaut": "1.1.4",
+    "yargs": "17.0.1"
   }
 }
